--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,12 @@ spring:
     encoding: UTF-8
   data:
     mongodb:
-      database: news
-      username: admin
-      password: 196610121
-      host: 127.0.0.1
-      port: 27017
-      authentication-database: news
+      uri: mongodb://admin:196610121@localhost:27017/news
+#      host: localhost
+#      port: 27017
+#      authentication-database: news
+#      username: admin
+#      password: 196610121
+#      database: news
       gridfs:
         bucket: fs
